# SemiCRFSegmentation

./: CMakeLists.txt  command.txt
demo_data/: dev.ctb60.nnpos.debug  option.debug  sample.txt  sample.txt.debug
demo_data/model/: model
src/: CMakeLists.txt
src/NNCRFSegmentor/: NNCRFSegmentor.cpp
src/NNCRFSegmentor/model/: Driver.h  ModelParams.h
src/NNCharCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp
src/NNCharCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNCharSparseCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp
src/NNCharSparseCRFSegmentor/model/: ComputionGraph.h  ModelParams.h
src/NNHypridCRFSegmentor/: NNHypridCRFSegmentor.cpp
src/NNHypridCRFSegmentor/model/: Driver.h  ModelParams.h
src/NNSEmbHypridCRFSegmentor/: NNSEmbHypridCRFSegmentor.cpp
src/NNSEmbHypridCRFSegmentor/model/: Driver.h  ModelParams.h
src/NNSEmbSemiCRFSegmentor/: NNSEmbSemiCRFSegmentor.cpp
src/NNSEmbSemiCRFSegmentor/model/: Driver.h  ModelParams.h
src/NNSemiCRFSegmentor/: NNSemiCRFSegmentor.cpp
src/NNSemiCRFSegmentor/model/: Driver.h  ModelParams.h
src/NNSparseCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp
src/NNSparseCRFSegmentor/model/: ComputionGraph.h  Driver.h  ModelParams.h
src/SparseCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp
src/SparseCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/basic/: InstanceReader.h
wmq_data/data/example/: example.txt  example.txt.debug
wmq_data/data/sample/: sample.txt.debug
wmq_data/option/: option.debug
