
include_directories(
  basic
)

add_subdirectory(SparseCRFSegmentor)
add_subdirectory(NNCRFSegmentor)
add_subdirectory(NNCharCRFSegmentor)
add_subdirectory(NNSparseCRFSegmentor)
add_subdirectory(NNCharSparseCRFSegmentor)
#add_subdirectory(NNSemiCRFSegmentor)
#add_subdirectory(NNHypridCRFSegmentor)
#add_subdirectory(NNSEmbSemiCRFSegmentor)
#add_subdirectory(NNSEmbHypridCRFSegmentor)


